--- a/content/2023-12-03.md
+++ b/content/2023-12-03.md
@@ -11,6 +11,7 @@ Here is an interesting C puzzle I created recently. It is a silly one but you mi
         printf("hello, world\n");
         return 0;
     }
+![Alt text](https://www.freecodecamp.org/news/content/images/size/w2000/2022/08/pexels-ken-tomita-389819.jpg "Optional title")
 
 
 This code compiles and runs successfully.
